# vulkit

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  convoy.py  flake.nix
codegen/: cppgen.py  generator.py  vkloader.py
codegen/cpp/: generator.py  vkloader.py
docs/: Doxyfile
setup/: build.ini  build.py  cmake_scanner.py  convoy.py
tests/: CMakeLists.txt
tests/tests/: device.cpp  execution.cpp  utils.cpp  utils.hpp
tests/tests/backend/: instance.cpp  physical_device.cpp
tests/tests/vulkan/: instance.cpp  physical_device.cpp
vulkit/: CMakeLists.txt
vulkit/vkit/backend/: command_pool.cpp  command_pool.hpp  device.hpp  instance.cpp  instance.hpp  logical_device.cpp  logical_device.hpp  physical_device.cpp  physical_device.hpp  swap_chain.cpp  swap_chain.hpp  system.cpp  system.hpp
vulkit/vkit/buffer/: buffer.cpp  buffer.hpp  device_buffer.hpp  device_local_buffer.hpp  host_visible_buffer.hpp  index_buffer.cpp  index_buffer.hpp  storage_buffer.hpp  utils.hpp  vertex_buffer.cpp  vertex_buffer.hpp
vulkit/vkit/command/: command_pool.cpp  command_pool.hpp
vulkit/vkit/core/: alias.hpp  api.hpp  core.cpp  core.hpp  device.cpp  device.hpp  instance.cpp  instance.hpp  limits.hpp  pch.cpp  pch.hpp  vma.hpp
vulkit/vkit/descriptors/: descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  descriptor_writer.cpp  descriptor_writer.hpp
vulkit/vkit/device/: logical_device.cpp  logical_device.hpp  physical_device.cpp  physical_device.hpp  proxy_device.hpp
vulkit/vkit/execution/: command_pool.cpp  command_pool.hpp  queue.cpp  queue.hpp
vulkit/vkit/memory/: allocator.cpp  allocator.hpp
vulkit/vkit/pipeline/: compute_job.cpp  compute_job.hpp  compute_pipeline.cpp  compute_pipeline.hpp  graphics_job.cpp  graphics_job.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  pipeline_job.cpp  pipeline_job.hpp  pipeline_layout.cpp  pipeline_layout.hpp  shader.cpp  shader.hpp
vulkit/vkit/presentation/: swap_chain.cpp  swap_chain.hpp
vulkit/vkit/rendering/: command_pool.cpp  command_pool.hpp  image.cpp  image.hpp  render_pass.cpp  render_pass.hpp  swap_chain.cpp  swap_chain.hpp
vulkit/vkit/resource/: buffer.cpp  buffer.hpp  device_buffer.cpp  device_buffer.hpp  device_image.cpp  device_image.hpp  host_buffer.cpp  host_buffer.hpp  image.cpp  image.hpp  sampler.cpp  sampler.hpp  utils.hpp
vulkit/vkit/state/: compute_pipeline.cpp  compute_pipeline.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  pipeline_job.cpp  pipeline_job.hpp  pipeline_layout.cpp  pipeline_layout.hpp  render_pass.cpp  render_pass.hpp  shader.cpp  shader.hpp
vulkit/vkit/vulkan/: allocator.cpp  allocator.hpp  instance.cpp  instance.hpp  loader.cpp  loader.hpp  logical_device.cpp  logical_device.hpp  physical_device.cpp  physical_device.hpp  system.cpp  system.hpp  vulkan.cpp  vulkan.hpp
